# diy-weather-station

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  Cargo.toml  README.md  config.toml  docker-compose.yml  grafana.ini  platformio.ini  prometheus.yml
client/app/: Cargo.toml  build.rs  memory.x
client/app/.cargo/: config.toml
client/app/src/: adc_abstraction.rs  config.rs  dfu.rs  http_server.rs  i2c_abstraction.rs  main.rs  rng.rs
client/app/src/http_server/: endpoints.rs
client/app/src/sensors/: cpu_temp_sensor.rs  ens160.rs  lis2mdl.rs  mod.rs  mpl3115a2.rs  noise.rs  sht4x.rs  sound.rs  tsl2591.rs  uv.rs
client/bootloader/: Cargo.toml  Embed.toml  README.md  build.rs  memory.x
client/bootloader/.cargo/: config.toml
client/bootloader/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  influx_payloads.rs  lib.rs
common/src/json_payloads/: cpu_temp_sensor.rs  ens160.rs  lis2mdl.rs  mod.rs  mpl3115a2.rs  noise.rs  sht4x.rs  tsl2591.rs  uv.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: lib.rs  main.cpp  main.rs  prometheus.rs  types.rs
src/http/: mod.rs
src/sensors/: temp.cpp
src/utils/: main.h  wifi.cpp  wifi_credentials.h
