[package]
name = "weather_station_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
rmp-serde = "1"
prometheus = "0.13"
lazy_static = "1"
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
