[package]
name = "root"
version = "0.0.0"
edition = "2021"

[dependencies]

[workspace]
members = [
	"server",
	"client/app",
	"client/bootloader",
	"common",
]

[profile.release]
debug = 2

[patch.crates-io]
embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy" }
embassy-net = { version = "0.4", git = "https://github.com/embassy-rs/embassy" }
