[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["dep:influxdb", "dep:chrono", "chrono/std", "chrono/clock"]

[dependencies]
defmt = "0.3"
serde = { version = "1", default-features = false }
serde_derive = { version = "1", default-features = false }
chrono = { version = "0.4", optional = true, default-features = false }
influxdb = { version = "0.7", features = ["derive"], optional = true }
