[package]
edition = "2021"
name = "client"
version = "0.1.0"
license = "EUPL-1.2"

[dependencies]
embassy-embedded-hal = { version = "0.1", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.5", git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { version = "0.5", git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-16384", "defmt", "nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "time-driver", "critical-section-impl"] }
embassy-boot = { version = "0.2", git = "https://github.com/embassy-rs/embassy" }
embassy-boot-rp = { version = "0.2", git = "https://github.com/embassy-rs/embassy" }
embassy-net = { version = "0.4", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "tcp", "udp", "dhcpv4", "proto-ipv4", "medium-ethernet"] }
embassy-futures = { version = "0.1", git = "https://github.com/embassy-rs/embassy" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1"

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
futures = { version = "0.3", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = { version = "0.8", features = [] }

embedded-hal-async = "1.0.0-rc.3"
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-storage-async = { version = "0.4" }
static_cell = { version = "2.0", features = ["nightly"] }
pio-proc = "0.2"
pio = "0.2"
rand = { version = "0.8", default-features = false }
critical-section = "1"
once_cell = { version = "1", default-features = false, features = ["critical-section"] }
portable-atomic = { version = "1", features = ["critical-section"] }

libm = "0.2"

serde = { version = "1", default-features = false }
serde_derive = { version = "1", default-features = false }
#serde-json-core = { version = "0.5", default-features = false, features = ["heapless"] }
picoserve = { git = "https://github.com/sammhicks/picoserve", features = ["embassy"] }

sht4x = { git = "https://github.com/tazz4843/sht4x-hal", default-features = false, features = ["async"] }
mpl3115a2-hal = { git = "https://github.com/tazz4843/mpl3115a2-hal", default-features = false, features = ["async"] }
ens160 = { git = "https://github.com/tazz4843/ens160-hal", default-features = false, features = ["async"] }
tsl2591 = { git = "https://github.com/tazz4843/tsl2591-hal", default-features = false, features = ["async"] }
lis2mdl = { git = "https://github.com/tazz4843/lis2mdl-hal", default-features = false, features = ["async"] }
common = { path = "../../common" }
ntp-nostd = "0.0.1"

[features]
default = ["panic-reset"]
debug = [
	"embassy-sync/defmt",
	"embassy-time/defmt",
	"embassy-time/defmt-timestamp-uptime",
	"embassy-rp/defmt",
	"embassy-boot-rp/defmt",
	"panic-probe"
]