[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

embassy-rp = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "time-driver"] }
embassy-boot-rp = { version = "0.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-sync = { version = "0.5", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy" }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-storage = "0.3"
embedded-storage-async = "0.4"
cfg-if = "1"

[profile.release]
opt-level = 's'
debug = true
